values/Infrastructure/longhorn/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard-ingress
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.app.homelab.me`) && PathPrefix(`/`)
      kind: Rule
      services:
      - name: longhorn-frontend  
        port: 80 
  tls:
    secretName: longhorn-tls
